# Galicio/routes/accounts.js
@@ -4,15 +4,14 @@ const Account = require('../models/Account');
 const mongoose = require("mongoose");
 
 router.get('/', async (req, res) => {
-
     try {
         const account = await Account.find().whereActive().exec()
         const resAccount = []
 
         account.forEach(d => resAccount.push({
+            cbu: d.cbu,
             balance: d.balance,
-            active: d.is_active,
-            cbu: d.cbu
+            active: d.is_active
         }))
         res.status(200).json(resAccount)
     }catch (e) {
@@ -37,11 +36,11 @@ router.post('/', async (req, res) => {
 
         const resAccount = {
             cbu: account.cbu,
-            balance: account.balance,
+            balance: account.balance.toString(),
             active: account.is_active
         }
 
-        res.status(200).json(resAccount);
+        res.status(201).json(resAccount);
     } catch (e) {
         res.status(400).json({error: e.message});
     }
@@ -52,7 +51,11 @@ router.get('/:cbu', async (req, res) => {
 
     try {
         const account = await Account.find().getByCbu(cbu).exec()
-        res.status(200).json(account)
+        res.status(200).json({
+            cbu: account.cbu,
+            balance: account.balance,
+            active: account.is_active
+        })
     }catch (e) {
         res.status(400).json({error: e.message})
     }
@@ -66,18 +69,18 @@ router.delete('/:cbu', async (req, res) => {
     try {
         const account = await Account.find().getByCbu(cbu).exec()
 
-        if(!account){
+        if (!account) {
             throw new Error("No account was found");
         }
 
-        if(!account.is_active) {
+        if (!account.is_active) {
             throw new Error("Account already deleted");
         }
 
         const newAccount =  await Account.findOneAndUpdate({_id: account._id}, {is_active: false}, {session, new:true});
         await session.commitTransaction();
 
-        res.status(200).json(newAccount)
+        res.status(204).json();
     } catch (e) {
         await session.abortTransaction();
         session.endSession();
@@ -93,21 +96,22 @@ router.put('/:cbu', async (req, res) => {
 
     try {
 
-        if(!balance){
+        if (!balance) {
             throw new Error('Parameter "balance" missing')
         }
 
         const account = await Account.find().getByCbu(cbu).exec()
 
-        if(!account){
+        if (!account) {
             throw new Error("No account was found");
         }
 
-        if(!account.is_active) {
+        if (!account.is_active) {
             throw new Error("Account already deleted");
         }
 
-        const newAccount =  await Account.findOneAndUpdate({_id: account._id}, {balance: parseInt(balance)});
+        await Account.findOneAndUpdate({_id: account._id}, {balance: parseInt(balance)});
+        res.status(204).send();
     } catch (e){
         res.status(400).json({error: e.message})
     }
