# Galicio/static/swagger.yaml
@@ -51,7 +51,7 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateAccountForm'
       responses:
-        '200':
+        '201':
           content:
             application/json:
               schema:
@@ -93,7 +93,7 @@ paths:
             schema:
               $ref: '#/components/schemas/AccountBalance'
       responses:
-        '200':
+        '204':
           description: No response body
     delete:
       operationId: api_accounts_destroy
@@ -186,7 +186,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Transaction'
       responses:
-        '200':
+        '201':
           content:
             application/json:
               schema:
